Projeto ICL/src/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
/** ID lister. */

import java.util.ArrayList;

public class Parser implements ParserConstants {
  /** Main entry point. */
  public static void main(String args [])
  {
    Compiler c = new Compiler();
    Environment e = new EnviromentImp();
    ArrayList<String> list = new ArrayList<String>();
    list.add(".class public Main");
    list.add(".super java/lang/Object");
    list.add("");
    list.add(".method public <init>()V");
    list.add("  aload_0");
    list.add("  invokenonvirtual java/lang/Object/<init>()V");
    list.add("  return");
    list.add(".end method");
    list.add("");
    list.add(".method public static main([Ljava/lang/String;)V");
    list.add("\u0009.limit locals 10");
    list.add("\u0009.limit stack 256");
    list.add("\u0009getstatic java/lang/System/out Ljava/io/PrintStream;");
    list.add("\u0009");
    list.add("\u0009aconst_null");
    list.add("\u0009astore 4");
    Parser parser = new Parser(System.in);
    ASTNode exp;
    while (true)
    {
      try
      {
        exp = parser.Start();
        System.out.println(exp.eval(e));
        exp.compile(e, list);
        list.add("");
        list.add("\u0009return");
        list.add(".end method");
        c.printFile(list);
      }
      catch (Exception ex)
      {
        System.out.println("Syntax Error!");
        parser.ReInit(System.in);
      }
    }
  }

/*
TOKEN: {
< LET : "let" >
| 
< IN : "in" >
| 
< END : "end" >
} */
  static final public ASTNode Start() throws ParseException {
  ASTNode t;
    t = Exp();
    jj_consume_token(EL);
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Exp() throws ParseException {
  Token op;
  ASTNode t1, t2;
    t1 = Term();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        op = jj_consume_token(PLUS);
        break;
      case MINUS:
        op = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
      if (op.kind == PLUS)
                t1 = new ASTPlus(t1, t2);
      else t1 = new ASTSub(t1, t2);
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode Term() throws ParseException {
  Token op;
  ASTNode t1, t2;
    t1 = Fact();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
      case DIV:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TIMES:
        op = jj_consume_token(TIMES);
        break;
      case DIV:
        op = jj_consume_token(DIV);
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      t2 = Term();
      if (op.kind == TIMES)
                t1 = new ASTTimes(t1, t2);
      else t1 = new ASTDiv(t1, t2);
    }
    {if (true) return t1;}
    throw new Error("Missing return statement in function");
  }

/*
ASTNode Let() :
{
  Token id, val, b;
  ASTNode t, aux, valNode, bNode;
}
{
  id=<Id><EQUAL>val=<Num> <IN> b=<BODY> <END>
  { valNode = new ASTNum(Integer.parseInt(val.image));
  	bNode = new ASTCode(b.image);
  	aux = new ASTLet(id.image, valNode, bNode);
  }
  {
    return aux;
  }
  //<LET> id=<Id> <EQUAL> val=<Num> <IN> b=<BODY> { t = new ASTLet(id.image, new ASTNum(Integer.parseInt(val.image)), new ASTCode(b.image)); }
}
*/

/*
ASTNode Fact() :
{ Token n;
  Token id;
  //Token body;
  //Token number;
  ASTNode t, t1, t2;
}
{
   
   ( n=<Num> { t = new ASTNum(Integer.parseInt(n.image)); }
   
   | <LET> id=<Id> <EQ> t1=Exp() <IN> t2=Exp() <END> { t = new ASTLet(id.image, t1, t2); }
   | n=<Id>  { t = new ASTId(n.image); }
   | <LPAR> t=Exp() <RPAR>
   | < MINUS > n=<Num> { t = new ASTNum(-Integer.parseInt( n.image )); }
   //| (<LET> id=<Id> <EQ> number = < Num > <IN> body = < BODY > <END>) { t = new ASTLet(id.image, new ASTNum(Integer.parseInt( number.image )), new ASTCode(body.image)); } 
   //| (<LET> id=<Id> <EQ> t1=Exp() <IN> t2 = Exp() <END>) { t = new ASTLet(id.image, t1, t2); }  
   )
 { return t; }
}
*/
  static final public ASTNode Fact() throws ParseException {
  Token n, id;
  ASTNode t, t1, t2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Num:
      n = jj_consume_token(Num);
               t = new ASTNum(Integer.parseInt(n.image));
      break;
    case LET:
      jj_consume_token(LET);
      id = jj_consume_token(Id);
      jj_consume_token(EQUAL);
      t1 = Exp();
      jj_consume_token(IN);
      t2 = Exp();
      jj_consume_token(END);
                                                         t=new ASTLet(id.image, t1, t2);
      break;
    case Id:
      n = jj_consume_token(Id);
             t = new ASTCode(n.image);
      break;
    case LPAR:
      jj_consume_token(LPAR);
      t = Exp();
      jj_consume_token(RPAR);
      break;
    case MINUS:
      jj_consume_token(MINUS);
      n = jj_consume_token(Num);
                       t = new ASTNum(-Integer.parseInt(n.image));
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[5];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1800,0x1800,0x6000,0x6000,0x9190,};
   }

  /** Constructor with InputStream. */
  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Parser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Parser(ParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 5; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[18];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 5; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 18; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
